--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: flutter_package_template
-version: 1.0.0
-homepage: https://github.com/marchdev-tk/flutter_package_template
-description: flutter_package_template description
+name: donut_chart
+version: 0.1.0
+homepage: https://github.com/marchdev-tk/donut_chart
+description: Donut chart
 
 environment:
   sdk: ">=2.6.0 <3.0.0"
